[gd_scene load_steps=7 format=2]

[ext_resource path="res://ModeExplore/Menus/Equipment/Equipment.gd" type="Script" id=1]
[ext_resource path="res://Assetts3.0/OtherUI/Equinox16Px.tres" type="DynamicFont" id=2]
[ext_resource path="res://ReusableUI/ArmsRoom/ArmsRoom.tscn" type="PackedScene" id=3]
[ext_resource path="res://ReusableUI/EquipmentPane/EquipmentPane.tscn" type="PackedScene" id=4]
[ext_resource path="res://ReusableUI/CharacterPanel/CharacterPanel.tscn" type="PackedScene" id=5]
[ext_resource path="res://ReusableUI/EquipmentDetail/EquipmentDetail.tscn" type="PackedScene" id=6]

[node name="Equipment" type="Panel" groups=[
"MAIN_MENU",
]]
margin_right = 1274.0
margin_bottom = 756.0
focus_mode = 2
mouse_filter = 1
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tripane" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Crewlist" type="VBoxContainer" parent="Tripane"]
margin_right = 419.0
margin_bottom = 756.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Tripane/Crewlist"]
margin_right = 419.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_fonts/font = ExtResource( 2 )
text = "Crew"
align = 1
valign = 1

[node name="CrewList" type="ScrollContainer" parent="Tripane/Crewlist"]
margin_top = 48.0
margin_right = 419.0
margin_bottom = 492.0
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false

[node name="Crew" type="VBoxContainer" parent="Tripane/Crewlist/CrewList"]
margin_right = 419.0
size_flags_horizontal = 3
size_flags_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterPanel" parent="Tripane/Crewlist" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 500.0
margin_right = 419.0
margin_bottom = 756.0
hideStatusEffects = true

[node name="Detail" type="VBoxContainer" parent="Tripane"]
margin_left = 427.0
margin_right = 846.0
margin_bottom = 756.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EquipmentPane" parent="Tripane/Detail" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 419.0
margin_bottom = 480.0

[node name="ItemPanel" parent="Tripane/Detail" instance=ExtResource( 6 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 488.0
margin_right = 419.0
margin_bottom = 756.0
rect_min_size = Vector2( 0, 256 )

[node name="ArmsRoom" parent="Tripane" instance=ExtResource( 3 )]
focus_mode = 2
[connection signal="equipmentAssignCancelled" from="Tripane/Detail/EquipmentPane" to="." method="_on_EquipmentPane_equipmentAssignCancelled"]
[connection signal="focus_entered" from="Tripane/ArmsRoom" to="." method="_on_ArmsRoom_focus_entered"]
[connection signal="itemFocused" from="Tripane/ArmsRoom" to="." method="_on_ArmsRoom_itemFocused"]
[connection signal="itemNotFocused" from="Tripane/ArmsRoom" to="." method="_on_ArmsRoom_itemNotFocused"]
[connection signal="itemSelected" from="Tripane/ArmsRoom" to="." method="_on_ArmsRoom_itemSelected"]
